# copefmt

./: Cargo.toml  README.md
data/: simple.groq
src/: lib.rs  main.rs
